custom.css
body {
  font-family: 'Droid Sans', sans-serif;
  background: #EDEDF1;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: 'Droid Sans', sans-serif;
}

a {
  color: #0275d8;
  cursor: pointer;
}

.easy {
  line-height: 1.5;
}

/* office computer */
@media (min-width: 1400px) {
  .container{
    width: 90%;
  }
}

.content {
  margin-top: 70px;
  margin-bottom: 30px;
  padding-bottom: 20px;
  background: #fff;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
}

.narrow-container {
  max-width: 330px;
  padding: 8% 0 0;
  margin: auto;
}

.narrow-content {
  margin-top: 20px;
  margin-left: 0;
  padding: 26px 24px 46px;
  background: #fff;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.13);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,.13);
          box-shadow: 0 1px 3px rgba(0,0,0,.13);
}

.narrow-content img {
  padding-bottom: 24px;
}

.home-header {
  max-width: 620px;
  margin-top: 130px;
  margin-bottom: 130px;
}

.home-footer {
  background: #888;
  color: #fff;
}

.feed-item {
  padding: 1em;
  border-bottom: 1px solid #f1f1f1;
  font-size: 14px;
}

.red {
  color: #66595c;
}

.logo {
  margin-bottom: 40px;
  margin-top: 20px;
}

/* proper logo aligning */
.navbar-brand {
  padding: 12.5px 12.5px;
}

section {
  padding-top:80px;
}

.callout {
  padding: 20px;
  border-left: 3px solid #eee;
}

.callout-info {
  background-color: #f4f8fa;
  border-color: #bce8f1;
}

.callout-info h4 {
  color: #5bc0de;
}

.callout-warning {
  background-color: #faf8f0;
  border-color: #faebcc;
}

.callout-warning h4 {
  color: #f0ad4e;
}

.asc:after {
    content: ' ⇣';
}

.desc:after {
    content: ' ⇡';
}

th a {
  display: block;
}
th, td {
  text-align: right;
}
th .tooltip {
  display: none;
}
th:hover .tooltip {
  display: block;
}

table .text {
  text-align: left;
  max-width: 150px;
  text-overflow: ellipsis;
  /* Required for text-overflow to do anything */
  white-space: nowrap;
  overflow: hidden;
}
table .odd {
  background-color: #f9f9f9;
}
.percent td:not(.text):after {
  content: '%';
}
.child .text:before {
  content: "﹂ ";
}
.table > tbody > .child > td, .table > tbody > .compared > td {
  border-top: none;
}
.mom {
  font-weight: 700;
}

/* For peer row highlight */
.self, .strong {
  font-weight:700;
}

.self a {
  color: #333;
}

/* Ratio Gallery */
.gallery .nav {
  padding-left: 15px;
}

.gallery .nav>li>a {
  display: block;
  padding: 4px 20px;
  font-size: 13px;
  font-weight: 500;
  color: #767676;
}

.gallery .nav>.active>a {
  padding-left: 18px;
  font-weight: 700;
  color: #563d7c;
  background-color: transparent;
  border-left: 2px solid #563d7c;
}

.gallery .nav>.heading {
  padding-left: 18px;
  font-weight: 700;
  color: #222;
}


/* Subnav */
.subnav {
  width: 100%;
  height: 36px;
  border: 1px solid #e5e5e5;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}
.subnav .nav {
  margin-bottom: 0;
}
.subnav .nav > li > a {
  line-height: 14px;
  margin: 0;
  padding: 11px 12px;
  border-left: 1px solid #f5f5f5;
  border-right: 1px solid #e5e5e5;
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
}
.subnav .nav-pills>li+li {
  margin-left: 0;
}
.subnav .nav > .active > a,
.subnav .nav > .active > a:hover {
  padding-left: 13px;
  color: #777;
  background-color: #e9e9e9;
  border-right-color: #ddd;
  border-left: 0;
  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
}
.subnav .nav > .active > a .caret,
.subnav .nav > .active > a:hover .caret {
  border-top-color: #777;
}
.subnav .nav > li:first-child > a,
.subnav .nav > li:first-child > a:hover {
  border-left: 0;
  padding-left: 12px;
  -webkit-border-radius: 4px 0 0 4px;
     -moz-border-radius: 4px 0 0 4px;
          border-radius: 4px 0 0 4px;
}
.subnav .nav > li:last-child > a {
  border-right: 0;
}
.subnav .dropdown-menu {
  -webkit-border-radius: 0 0 4px 4px;
     -moz-border-radius: 0 0 4px 4px;
          border-radius: 0 0 4px 4px;
}

/* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
@media (min-width: 980px) {
  .subnav-fixed {
    position: fixed;
    top: 50px;
    left: 0;
    right: 0;
    z-index: 900; /* 10 less than .navbar-fixed to prevent any overlap */
    border-color: #d5d5d5;
    border-width: 0 0 1px; /* drop the border on the fixed edges */
    -webkit-border-radius: 0;
       -moz-border-radius: 0;
            border-radius: 0;
    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
       -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
            box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); /* IE6-9 */
  }
  .subnav-fixed .nav {
    width: 960px;
    margin: 0 auto;
    padding: 0 1px;
  }
  .subnav .nav > li:first-child > a,
  .subnav .nav > li:first-child > a:hover {
    -webkit-border-radius: 0;
       -moz-border-radius: 0;
            border-radius: 0;
  }
}

.auto-modal {
  width: 600px;
}

.auto-modal .modal-body {
  max-height: 500px;
}

.right-al {
  text-align: right;
}

.sub, .sub a {
  color: #999999;
}

.sub a {
  text-decoration: underline;
}

.chart-tip {
  position: absolute;
  width: 0;
}
.chart-value {
  width: auto;
  padding: 7px;
  background: #f4f4f4;
}
.chart-point {
  background: #0275d8;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  width: 10px;
  height: 10px;
  margin-left: -5px;
  margin-top: -5px;
}
.chart-line {
  height: 265px;
  border-right: 1px rgba(0,0,0,0.3) solid;
  stroke: #cccccc;
  stroke-dasharray: 1,1;
  stroke-width: 1;
}
.ct-label {
  white-space: nowrap;
}
.ct-series-a .ct-point {
  stroke: #0275d8;
  stroke-opacity: 0;
}
.ct-point-line {
  stroke: #222;
  stroke-width: 3px;
  stroke-opacity: 0;
}
.ct-grid {
  stroke-dasharray: 1px;
}
.ct-series-a .ct-area {
  fill: #0275d8;
}
.ct-series-a .ct-line {
  stroke: #0275d8;
  stroke-width: 2px;
}


.embed-menu {
  display: block;
  position: relative;
  left:-10px;
  top:-10px;
}

.print {
  display: none;
}

@media print {
  @page {
    size: landscape;
    margin: .25in .25in .5in .25in;
    orphans:4;
    widows:2;
  }

  body {
    padding: 0;
    background: none;
  }

  .no-print {
    display: none;
  }
  .print {
    display: inline;
  }

  h1, h2, h3, h4, h5, h6 { page-break-after : avoid }

  .content p {
    font-size: 16px;
  }
}

